improved build config